# VSFilterModButCMake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/BaseClasses/: CMakeLists.txt
src/basevideofilter/: CMakeLists.txt  stdafx.h
src/compat/: compat.h  compat_mfc_types.h  compat_windows_types.h
src/dsutil/: CMakeLists.txt  stdafx.h  text.h
src/libpng/: CMakeLists.txt
src/platform/: CMakeLists.txt  font_engine.h  font_engine_freetype.cpp  font_engine_gdi.cpp
src/plugins/: CMakeLists.txt  plugins_xplat.cpp  vfr_xplat.cpp
src/subpic/: CMakeLists.txt  CoordGeom.cpp  CoordGeom.h  ISubPic.cpp  ISubPic.h  MemSubPic.cpp  stdafx.h
src/subtitles/: CCDecoder.cpp  CMakeLists.txt  DVBSub.cpp  GFN.cpp  GFN.h  HdmvSub.cpp  RTS.cpp  RTS.h  Rasterizer.cpp  Rasterizer.h  RealTextParser.cpp  SSF.cpp  SSF.h  STS.cpp  STS.h  SeparableFilter.h  TextFile.cpp  TextFile.h  USFSubtitles.cpp  USFSubtitles.h  VobSubFile.cpp  VobSubFile.h  VobSubFileRipper.cpp  VobSubFileRipper.h  VobSubImage.h  stdafx.h
src/subtitles/libssf/: Exception.cpp  File.cpp  FontWrapper.cpp  Glyph.cpp  Glyph.h  GlyphPath.cpp  GlyphPath.h  Node.cpp  NodeFactory.cpp  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Stream.cpp  StringMap.h  Subtitle.cpp  Subtitle.h  stdafx.h
src/vsfilter/: CMakeLists.txt
src/zlib/: CMakeLists.txt
